@@ -1,3 +1,9 @@
+2011-05-26 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* src/mcs51/gen.c: changed snprintf to SNPRINTF,
+	  implemented --fomit-frame-pointer for --xstack
+	* src/SDCCmem.c(printAllocInfoSeg): print stack/xstack offsets
+
 2011-05-26 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* src/z80/gen.c,
